@@ -458,6 +458,10 @@ name|instantiatedzkw
 init|=
 literal|false
 decl_stmt|;
+specifier|private
+name|Abortable
+name|abortable
+decl_stmt|;
 comment|/*    * Do not clear this address once set.  Its needed when we do    * server shutdown processing -- we need to know who had .META. last.  If you    * want to know if the address is good, rely on {@link #metaAvailable} value.    */
 specifier|private
 name|ServerName
@@ -638,6 +642,8 @@ literal|null
 condition|)
 block|{
 comment|// A connection is abortable.
+name|this
+operator|.
 name|abortable
 operator|=
 name|this
@@ -645,6 +651,49 @@ operator|.
 name|connection
 expr_stmt|;
 block|}
+name|Abortable
+name|throwableAborter
+init|=
+operator|new
+name|Abortable
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|abort
+parameter_list|(
+name|String
+name|why
+parameter_list|,
+name|Throwable
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|why
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|isAborted
+parameter_list|()
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+decl_stmt|;
 if|if
 condition|(
 name|zk
@@ -695,7 +744,7 @@ name|RootRegionTracker
 argument_list|(
 name|zookeeper
 argument_list|,
-name|abortable
+name|throwableAborter
 argument_list|)
 expr_stmt|;
 specifier|final
@@ -714,7 +763,7 @@ name|MetaNodeTracker
 argument_list|(
 name|zookeeper
 argument_list|,
-name|abortable
+name|throwableAborter
 argument_list|)
 block|{
 specifier|public
@@ -770,6 +819,8 @@ operator|+
 name|this
 argument_list|)
 expr_stmt|;
+try|try
+block|{
 name|this
 operator|.
 name|rootRegionTracker
@@ -784,6 +835,45 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RuntimeException
+name|e
+parameter_list|)
+block|{
+name|Throwable
+name|t
+init|=
+name|e
+operator|.
+name|getCause
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|abortable
+operator|.
+name|abort
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|t
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Attempt to start root/meta tracker failed."
+argument_list|,
+name|t
+argument_list|)
+throw|;
+block|}
 block|}
 comment|/**    * Stop working.    * Interrupts any ongoing waits.    */
 specifier|public
