@@ -837,6 +837,7 @@ Release 0.90.6 - Unreleased
 
   BUG FIXES
    HBASE-4970  Add a parameter so that keepAliveTime of Htable thread pool can be changed (gaojinchao)
+   HBASE-5060  HBase client is blocked forever (Jinchao)
 
 Release 0.90.5 - Unreleased
 
